# brain_organoid_criticality

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
src/brain_organoid_criticality/: avalanches.py  io.py
src/brain_organoid_criticality.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
